--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12564,12 +12564,14 @@ section.home-search .home-search-mobile {
     height: 50px;
     line-height: 50px;
     margin: 0;
-    color: #9a9a9a;
+    color: #595959;
     font-weight: 200;
     font-size: 1.6em;
     letter-spacing: 1px;
     padding: 0 10px 0 25px;
     border-bottom: 1px solid #f7f7f7; }
+    #content.search .sidebar h2:hover {
+      cursor: pointer; }
     #content.search .sidebar h2 .chevron {
       float: right;
       font-size: 2em;
@@ -12578,7 +12580,7 @@ section.home-search .home-search-mobile {
       -ms-transform: rotate(90deg);
       -o-transform: rotate(90deg); }
   #content.search .sidebar h4 {
-    color: #9a9a9a;
+    color: #595959;
     padding: 25px;
     border-bottom: 1px solid #f7f7f7;
     margin-bottom: 0; }
@@ -12593,7 +12595,7 @@ section.home-search .home-search-mobile {
     padding: 10px 25px;
     border-bottom: 1px solid #f7f7f7; }
   #content.search .sidebar label {
-    color: #9a9a9a;
+    color: #595959;
     background-color: white;
     font-size: 1.4em;
     font-weight: 200;
