--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -882,21 +882,23 @@
             height: 50px;
             line-height: 50px;
             margin: 0;
-            color: $grey7;
+            color: $font-color;
             font-weight: $light;
             font-size: 1.6em;
             letter-spacing: 1px;
             padding: 0 10px 0 25px;
             border-bottom: 1px solid $bg4;
+            &:hover {
+                cursor: pointer;
+            }
             .chevron {
                 float: right;
                 font-size: 2em;
                 @include rotate(90deg);
-
             }
         }
         h4 {
-            color: $grey7;
+            color: $font-color;
             padding: 25px;
             border-bottom: 1px solid $bg4;
             margin-bottom: 0;
@@ -916,7 +918,7 @@
             border-bottom: 1px solid $bg4;
         }
         label {            
-            color: $grey7;
+            color: $font-color;
             background-color: white;
             font-size: 1.4em;
             font-weight: $light;
