--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -857,6 +857,7 @@
     }
     .sidebar {
         background: white;
+        margin-bottom: 60px;
         @media screen and (max-width: $screen-xs-max) {
             padding-top: 0;
             z-index: 149;
