--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -1084,6 +1084,45 @@
             margin-left: 10px;
         }
     }
+    .top-reviews {
+        margin-top: -30px;
+        .single-comment {
+            border-bottom: 1px solid $grey5;
+            padding: 15px 0;
+        }
+        .ProfilePicture {
+            width: 50px;
+            height: 50px;
+            margin-top: 5px;
+        }
+        div.title {
+            p {
+                color: $grey4;
+                text-transform: uppercase;
+                font-weight: $regular;
+                .gender-symbol {
+                    display: none;
+                }
+            }
+            .stars {
+                .star {
+                    height: 20px;
+                    width: 20px;
+                    &.min {
+                        background-size: 80%;
+                    }
+                }
+            }
+        }
+        .yelp-date {
+            color: $grey;
+            font-size: 1.2em;
+        }
+        a:hover {
+            color: inherit;
+            text-decoration: none;
+        }
+    }
 }
 .bg-white-xs {
     @media screen and (max-width: $screen-xs-max) {
