--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -31,7 +31,7 @@
             position: absolute;
             z-index: 1;
             top: 32.5%;
-            left: calc(100% + 2.5vw);
+            left: 100%;
             padding-top: calc(9.5% - 25px);
             padding-left: calc(5vw - 25px);
         }
