--- a/public/components/bootstrap-sass-official/assets/stylesheets/bootstrap/_breadcrumbs.scss
+++ b/public/components/bootstrap-sass-official/assets/stylesheets/bootstrap/_breadcrumbs.scss
@@ -8,7 +8,7 @@
   margin-bottom: $line-height-computed;
   list-style: none;
   background-color: $breadcrumb-bg;
-  border-radius: $border-radius-base;
+  border-radius: 0;
 
   > li {
     display: inline-block;
